--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "mongoose": "^5.13.2",
     "next": "11.0.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-typical": "^0.1.3"
