--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@netlify/plugin-nextjs": "^3.6.3",
     "mongoose": "^5.13.2",
     "next": "11.0.1",
     "next-connect": "^0.10.1",
