--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.13.2",
     "next": "11.0.1",
     "next-connect": "^0.10.1",
+    "next-seo": "^4.26.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.2",
